k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wuhu-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - wuhu.liu.ms
        - api.wuhu.liu.ms
      secretName: wuhu-tls
  rules:
    - host: wuhu.liu.ms
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3000
    - host: api.wuhu.liu.ms
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: core
                port:
                  number: 3000
